[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "plts_forecaster"
version = "0.0.1"
description = "PoC MLOps untuk prediksi daya surya dengan XGBoost"
authors = [
  { name = "Achmad Alvian Prasetio" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["plts_forecaster"]
include = ["pyproject.toml", "plts_forecaster/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["plts_forecaster"]
force-sort-within-sections = true

